force-app/main/default/objects/Order_Line_Item__c/fields/CGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>CGST_Amount__c</fullName>
    <formula>IF(
    Order__r.totalIGST__c == null || Order__r.totalIGST__c == 0 ,
    Total_Amount__c * 0.025 ,
    0
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>