force-app/main/default/objects/Order_Line_Item__c/fields/Crate__c.field-meta.xml
<CustomField>
    <fullName>Crate__c</fullName>
    <formula>IF ( AND( NOT(ISBLANK(Ordered_Quantity__c)) , NOT(ISBLANK(Products__r.Crate_Conversion__c)) ) , TEXT(FLOOR(Ordered_Quantity__c/Products__r.Crate_Conversion__c)) &amp; &quot; Crate &quot; &amp; TEXT(MOD(Ordered_Quantity__c,Products__r.Crate_Conversion__c)) &amp; &quot; EA &quot; , &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crate</label>
    <type>Text</type>
</CustomField>