force-app/main/default/objects/Order_Line_Item__c/fields/IGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amount__c</fullName>
    <formula>IF(
    Order__r.totalIGST__c != null || Order__r.totalIGST__c  &gt; 0 ,
    Total_Amount__c * 0.05 ,
    0
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>