force-app/main/default/objects/Order_Line_Item__c/fields/Is_Promotional__c.field-meta.xml
<CustomField>
    <fullName>Is_Promotional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Promotional</label>
    <type>Checkbox</type>
</CustomField>