force-app/main/default/objects/Order_Line_Item__c/fields/Item_Boxes__c.field-meta.xml
<CustomField>
    <fullName>Item_Boxes__c</fullName>
    <description>Item boxes</description>
    <formula>MOD(Ordered_Quantity__c,Products__r.Crate_Conversion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Boxes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>