force-app/main/default/objects/Order_Line_Item__c/fields/Item_Crates__c.field-meta.xml
<CustomField>
    <fullName>Item_Crates__c</fullName>
    <description>Number of crates for the order line item</description>
    <formula>IF ( ISNULL ( Products__r.Crate_Conversion__c ), 0, FLOOR ( Ordered_Quantity__c / Products__r.Crate_Conversion__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Crates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>