force-app/main/default/objects/Order_Line_Item__c/fields/Line_Item_Volume__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Volume__c</fullName>
    <formula>Ordered_Quantity__c  *   VALUE(Products__r.Volume_Per_UOM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>