force-app/main/default/objects/Order_Line_Item__c/fields/Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Name__c</fullName>
    <formula>Order__r.Name</formula>
    <label>Order Name</label>
    <type>Text</type>
</CustomField>