force-app/main/default/objects/Order_Line_Item__c/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Order Line Items (Parent Product)</relationshipLabel>
    <relationshipName>Order_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>