force-app/main/default/objects/Order_Line_Item__c/fields/Per_Pieces__c.field-meta.xml
<CustomField>
    <fullName>Per_Pieces__c</fullName>
    <formula>Products__r.Per_Pieces__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per Pieces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>