force-app/main/default/objects/Order_Line_Item__c/fields/Product_Identity__c.field-meta.xml
<CustomField>
    <fullName>Product_Identity__c</fullName>
    <formula>Products__r.Category_Code__c &amp;&quot;-&quot;&amp; Products__r.Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Identity</label>
    <type>Text</type>
</CustomField>