force-app/main/default/objects/Order_Line_Item__c/fields/Quantity_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quantity Scheme Applied</label>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>