force-app/main/default/objects/Order_Line_Item__c/fields/Total_Amount_Incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Incl_Tax__c</fullName>
    <formula>Total_Amount__c +  IGST_Amount__c +  CGST_Amount__c +  SGST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (Incl Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>