force-app/main/default/objects/Order_Line_Item__c/fields/Updated_quanity__c.field-meta.xml
<CustomField>
    <fullName>Updated_quanity__c</fullName>
    <label>Recieved quanity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>