force-app/main/default/objects/Order_Line_Item__c/recordTypes/Counter_Order_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>Counter_Order_Line_Item</fullName>
    <active>true</active>
    <label>Counter Order Line Item</label>
</RecordType>