force-app/main/default/objects/Order_Line_Item__c/recordTypes/Primary_Order_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>Primary_Order_Line_Item</fullName>
    <active>true</active>
    <label>Primary Order Line Item</label>
</RecordType>