force-app/main/default/objects/Order_Line_Item__c/recordTypes/Secondary_Order_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>Secondary_Order_Line_Item</fullName>
    <active>true</active>
    <label>Secondary Order Line Item</label>
</RecordType>