force-app/main/default/objects/Order_Line_Item__c/recordTypes/Under_SS_Secondary_Order_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>Under_SS_Secondary_Order_Line_Item</fullName>
    <active>true</active>
    <label>Under SS Secondary Order Line Item</label>
</RecordType>