force-app/main/default/objects/Order_Line_Item__c/recordTypes/UnderSS_Order_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>UnderSS_Order_Line_Item</fullName>
    <active>true</active>
    <label>UnderSS Order Line Item</label>
</RecordType>